Add forms for user entry.

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,5 @@
 <h1>POS</h1>
+<h2> Where we sell all the old stuff noone else wants</h2>
 
 <h3><a href="/purchases">Manage Purchases</a></h3>
 <h3><a href="/products">Manage Products</a></h3>
